tests/fixtures/valid/fibonacci.luma
-- Fibonacci using recursion
let fib = fn(n: Number): Number do
    if n <= 1 do
        n
    else do
        fib(n - 1) + fib(n - 2)
    end
end

fib(10)
