tests/fixtures/invalid/parse_errors/missing_brace.luma
-- Missing end keyword
let test = fn() do
    let x = 1
